# policydemic_legal_info

./: .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml
backend/: README.md  index.js  index.test.js  package.json
crawler/: CGRT.py  README.md  downloadTest.py  tasks.py
crawler/COVID-19_PolicyWatch/: PolicyWatchSpider.py
crawler/COVIDPolicyWatch/: PolicyWatchSpider.py  settings.py
crawler/cgrt/: CGRT.py  CgrtTest.py
crawler/gov/: scrapy.cfg
crawler/gov/gov/: items.py  middlewares.py  pipelines.py  settings.py
crawler/gov/gov/spiders/: gov.py
crawler/imf/: imf_data.py
crawler/lio/: README.md  lio_data.py
elastic/: README.md  documents-index.json  example-document.json
frontend/: package.json
frontend/src/: App.js  index.js
frontend/src/common/: api.js
frontend/src/common/hooks/: form-dialog-hook.js
frontend/src/components/form/: async-autocomplete.component.js  edit-doc-dialog.component.js  new-doc-dialog.component.js  new-doc-form.component.js  upload-pdf.component.js
frontend/src/components/search/: delete-dialog.component.js  search-form.component.js  search-results-list.component.js  search-table.component.js
frontend/src/components/tabs/: crawler-config-tab.component.js  lad-tab.component.js  main-tabs-view.component.js  ssd-tab.component.js
nlpengine/: config.ini  tasks.py
pdfparser/: README.md  config.py  tasks.py  unittests.py
scheduler/: celery.py  celeryconfig.py
translator/: README.md  tasks.py  unittests.py
